// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="cursor-pointer"
        data-testid="file-item"
        style="background-color: inherit;"
      >
        <td
          class="center aligned"
        >
          <div
            class="ui fitted checkbox"
            data-testid="file-select"
          >
            <input
              class="hidden"
              readonly=""
              tabindex="0"
              type="checkbox"
              value=""
            />
            <label />
          </div>
        </td>
        <td
          class="center aligned"
        >
          <i
            aria-hidden="true"
            class="hospital big icon"
          />
        </td>
        <td
          class="px-20"
        >
          <span
            class="ui medium header"
          >
            <a
              href="/study/undefined/documents/SF_5ZPEM167"
            >
              organization.jpeg
            </a>
          </span>
          <small
            class="text-grey ml-10"
          >
            Modified
             
            <time
              datetime="2018-09-27T05:32:26.000Z"
              title="27 Sept 2018"
            >
              7 months ago
            </time>
          </small>
          <p
            class="noMargin"
          >
            Month necessary animal end standard case. View system operation message decade. Actually sing becaus...
          </p>
        </td>
        <td
          class="center aligned four wide"
        >
          <div
            class="ui labels"
          >
            <span
              class="text-grey"
            />
          </div>
        </td>
        <td
          class="center aligned"
        >
          <div
            class="ui small fluid buttons"
          >
            <button
              class="ui basic compact icon button"
              data-testid="copy-file-id"
            >
              <i
                aria-hidden="true"
                class="copy icon"
              />
            </button>
            <button
              class="ui basic compact icon button"
              data-testid="download-file"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders latest temporary state 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="cursor-pointer"
        data-testid="file-item"
        style="background-color: inherit;"
      >
        <td
          class="center aligned"
        >
          <div
            class="ui fitted checkbox"
            data-testid="file-select"
          >
            <input
              class="hidden"
              readonly=""
              tabindex="0"
              type="checkbox"
              value=""
            />
            <label />
          </div>
        </td>
        <td
          class="center aligned"
        >
          <i
            aria-hidden="true"
            class="hospital big icon"
          />
        </td>
        <td
          class="px-20"
        >
          <span
            class="ui medium header"
          >
            <a
              href="/study/undefined/documents/SF_5ZPEM167"
            >
              organization.jpeg
            </a>
          </span>
          <small
            class="text-grey ml-10"
          >
            Modified
             
            <time
              datetime="2018-09-27T05:32:27.000Z"
              title="27 Sept 2018"
            >
              7 months ago
            </time>
          </small>
          <p
            class="noMargin"
          >
            Month necessary animal end standard case. View system operation message decade. Actually sing becaus...
          </p>
        </td>
        <td
          class="center aligned four wide"
        >
          <div
            class="ui labels"
          >
            <span
              class="text-grey"
            />
          </div>
        </td>
        <td
          class="center aligned"
        >
          <div
            class="ui small fluid buttons"
          >
            <button
              class="ui basic compact icon button"
              data-testid="copy-file-id"
            >
              <i
                aria-hidden="true"
                class="copy icon"
              />
            </button>
            <button
              class="ui basic compact icon button"
              data-testid="download-file"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders loading state 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="cursor-pointer"
        data-testid="file-item"
        style="background-color: inherit;"
      >
        <td
          class="center aligned"
        >
          <div
            class="ui fitted checkbox"
            data-testid="file-select"
          >
            <input
              class="hidden"
              readonly=""
              tabindex="0"
              type="checkbox"
              value=""
            />
            <label />
          </div>
        </td>
        <td
          class="center aligned"
        >
          <i
            aria-hidden="true"
            class="hospital big icon"
          />
        </td>
        <td
          class="px-20"
        >
          <span
            class="ui medium header"
          >
            <a
              href="/study/undefined/documents/SF_5ZPEM167"
            >
              organization.jpeg
            </a>
          </span>
          <small
            class="text-grey ml-10"
          >
            Modified
             
            <time
              datetime="2018-09-27T05:32:26.000Z"
              title="27 Sept 2018"
            >
              7 months ago
            </time>
          </small>
          <p
            class="noMargin"
          >
            Month necessary animal end standard case. View system operation message decade. Actually sing becaus...
          </p>
        </td>
        <td
          class="center aligned four wide"
        >
          <div
            class="ui labels"
          >
            <span
              class="text-grey"
            />
          </div>
        </td>
        <td
          class="center aligned"
        >
          <div
            class="ui small fluid buttons"
          >
            <button
              class="ui basic compact icon button"
              data-testid="copy-file-id"
            >
              <i
                aria-hidden="true"
                class="copy icon"
              />
            </button>
            <button
              class="ui basic compact icon button"
              data-testid="download-file"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
